--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>This is a Total Waste Of Time</h1>
-<p>A project by James Pickles</p>
-<p>Coming Soon</p>
-</body>
+  <h1>Welcome to Bonanza!!!</h1>
+  <h2>available 365 days a year</h2>
+  <p>if you want to check your email, please <a href="office.com">click here</p>
 </html>
